@@ -229,6 +229,8 @@ BUGFIXES:
 
   ZOOKEEPER-1536 c client : memory leak in winport.c (brooklin via michim)
 
+  ZOOKEEPER-1481 allow the C cli to run exists with a watcher (phunt via michim)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-1170. Fix compiler (eclipse) warnings: unused imports,
